--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -19,6 +19,8 @@ ja:
        shipping_fee_id: 配送料の負担
        area_id: 発送元の地域
        price: 販売価格
+     card:
+       card_token: クレジットカード情報
  activemodel:
    attributes:
      object_item:
